--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
 	},
 	"author": "The Gametek Authors (https://github.com/mrgreentech/eslint-config-gametek/graphs/contributors)",
 	"peerDependencies": {
-		"eslint": ">= 6"
+		"eslint": ">= 7"
 	},
 	"dependencies": {
 		"babel-eslint": "~10.0.3",
 		"eslint-config-airbnb-base": "~14.1.0",
 		"eslint-config-prettier": "~6.11.0",
 		"eslint-plugin-angular": "~4.0.1",
+		"eslint-plugin-compat": "^3.7.0",
 		"eslint-plugin-import": "~2.20.2",
 		"eslint-plugin-jasmine": "~4.1.1",
 		"eslint-plugin-jest": "~23.13.2",
